<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="10sp" >

    <EditText
        android:id="@+id/property_key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/property_key"
        android:inputType="text"
        android:singleLine="true" >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/property_value"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/property_value"
        android:inputType="text"
        android:singleLine="true" >
    </EditText>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:text="@string/cancel" />

        <Button
            android:id="@+id/btn_ok"
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_toRightOf="@+id/btn_cancel"
            android:text="@string/ok" />
    </RelativeLayout>

</LinearLayout>